# UHCR

./: .gitignore  CNAME  DOCUMENTATION_IMPROVEMENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: blank.yml  deploy.yml  jekyll-gh-pages.yml  jekyll.yml  pages.yml  test.yml
docs/: 404.html  _config.yml  ai-integration.md  api-reference.md  architecture.md  benchmarks.md  benchmarks_docker.md  benchmarks_k8s.md  benchmarks_kubernetes.md  cli.md  containerization.md  contributing.md  features.md  generate_scss.py  guides.md  hardware-reference.md  how-uhcr-works.md  index.md  jit-guide.md  manifest.webmanifest  multi-isa.md  network.md  offline.html  optimization-passes.md  plugin-guide.md  plugins.md  quickstart.md  reference.md  runtime.md  search.json  storage.md  sw.js
docs/_includes/: head_custom.html
docs/_layouts/: default.html
docs/_sass/: custom.scss
docs/_sass/base/: _reset.scss  _typography.scss
docs/_sass/components/: _buttons.scss  _code.scss  _links.scss  _tables.scss
docs/_sass/layout/: _header.scss  _main.scss  _sidebar.scss
docs/_sass/themes/: _dark.scss  _light.scss
docs/_sass/tokens/: _colors.scss  _spacing.scss  _typography.scss
docs/assets/css/: custom.scss  just-the-docs-default.scss
docs/assets/js/: animations.js  custom.js
mcp/: README.md  config.json  requirements.txt  server.py  test_client.py
plugins/cpu_avx2/: main.py  plugin.toml
plugins/example_plugin/: __init__.py  main.py  plugin.toml
plugins/isa_auto/: __init__.py  main.py  plugin.toml
plugins/llama/: __init__.py  base.py  config.py  plugin.py
tests/: __init__.py  test.py  test_arm64_deployment.py  test_benchmarks.py  test_benchmarks_quick.py  test_benchmarks_real_plugin.py  test_benchmarks_with_plugins.py  test_cli_analytics.py  test_cli_config.py  test_codegen_multiarch.py  test_compiler.py  test_coordinator.py  test_frontend.py  test_grpc_service.py  test_hardware.py  test_health.py  test_ir_safety.py  test_jit_loops.py  test_jit_strings.py  test_jobs.py  test_list_runtime.py  test_list_types.py  test_llama.py  test_loop_ir.py  test_passes.py  test_protocol_server.py  test_runtime.py  test_serialization.py  test_string_pool.py  test_tensor.py  test_v41_benchmarks.py  test_version.py
uhcr/: __init__.py  cli.py
uhcr/api/: __init__.py  ops.py  precompiled.py  tensor.py  vectorized_ops.py
uhcr/backends/: __init__.py  backend_base.py  backend_selector.py  cpu_avx2.py  cpu_avx512.py  cpu_generic.py  cuda_backend.py
uhcr/benchmarks/: __init__.py  runner.py
uhcr/cli/: __init__.py  base.py
uhcr/compiler/: __init__.py  ir.py  ir_builder.py
uhcr/compiler/aarch64/: __init__.py  apple_silicon.py  assembler.py  codegen.py  cross_compile.py  target_profile.py
uhcr/compiler/frontend/: __init__.py
uhcr/compiler/passes/: __init__.py  constant_folding.py  cse.py  dead_code.py  pipeline.py  strength_reduction.py
uhcr/compiler/riscv/: __init__.py  assembler.py  codegen.py
uhcr/compiler/x86_64/: __init__.py  assembler.py  codegen.py  executable_memory.py
uhcr/containerization/: __init__.py  hardware_resources.py  k8s_generator.py
uhcr/contanerization/: config.py  docker_generator.py  validators.py
uhcr/frontend/: __init__.py  decorator.py
uhcr/hardware/: __init__.py  cache_detect.py  cpuid.py  gpu_detect.py  memory_detect.py  platform_info.py
uhcr/mcp/: __init__.py  schema.py  server.py  tools.py
uhcr/native/: CMakeLists.txt  README.md  __init__.py  build_native.py  safety_checker.cpp  safety_checker.hpp  safety_monitor.cpp  safety_monitor.hpp
uhcr/network/: __init__.py  coordinator.py  grpc_service.py  health.py  jobs.py  rest_api.py  serialization.py  server.py
uhcr/network/proto/: health.proto  uhcr_service.proto
uhcr/plugins/: __init__.py  avx2_optimizer.py  base.py  gpu_amd.py  gpu_intel.py  gpu_nvidia.py
uhcr/runtime/: __init__.py  list_runtime.py  memory_manager.py  runtime.py  scheduler.py  string_pool.py
uhcr/security/: __init__.py  runtime_safety.py
uhcr/storage/: __init__.py  checksum.py  io_optimizer.py  memory_pool.py  redis_cache.py  sqlite_store.py
web/: DEPLOYMENT.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/hooks/: useMarkdown.ts
web/src/pages/DocPage/: DocPage.tsx
