[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uhcr"
version = "5.2.0"
description = "Universal Hardware-Aware Compute Runtime — Enterprise-grade modular execution stack with C++ safety checking"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Vishvesh Joshi", email = "vishvesh.joshi@uhcr.dev"}
]
maintainers = [
    {name = "Vishvesh Joshi", email = "vishvesh.joshi@uhcr.dev"}
]
keywords = [
    "compiler", "runtime", "hardware", "simd", "avx", "cuda", "jit", 
    "tensor", "cli", "safety", "security", "enterprise", "aot",
    "optimization", "kubernetes", "docker", "mcp", "ai-agents"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Hardware",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: Console",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "pyyaml>=6.0",
    "pytest-asyncio>=0.21",
    "tomli>=2.0;python_version<'3.11'",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
network = [
    "grpcio>=1.60.0",
    "aiohttp>=3.9.0",
    "protobuf>=4.25.0",
]
enterprise = [
    "grpcio>=1.60.0",
    "aiohttp>=3.9.0",
    "protobuf>=4.25.0",
    "pyyaml>=6.0",
    "tomli>=2.0;python_version<'3.11'",
]
all = [
    "grpcio>=1.60.0",
    "aiohttp>=3.9.0",
    "protobuf>=4.25.0",
    "pyyaml>=6.0",
    "tomli>=2.0;python_version<'3.11'",
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
]

[project.scripts]
uhcr = "uhcr.cli:main"

[project.urls]
Homepage = "https://vishveshjoshi89.github.io/UHCR-DOCS"
Repository = "https://github.com/VishveshJoshi89/UHCR"
Documentation = "https://uhcr-docs.vercel.app/"
"Bug Tracker" = "https://github.com/VishveshJoshi89/UHCR/issues"
Changelog = "https://github.com/VishveshJoshi89/UHCR/blob/main/CHANGELOG.md"
"Safety Documentation" = "https://github.com/VishveshJoshi89/UHCR-DOCS/#/blob/main/SAFETY.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["uhcr*"]
exclude = ["tests*", "docs*", "build*", "dist*"]

[tool.setuptools.package-data]
uhcr = [
    "py.typed",
    "native/*.hpp",
    "native/*.cpp",
    "native/CMakeLists.txt",
    "native/*.md",
    "native/build_native.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "enterprise: marks tests requiring enterprise features",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EXE", "ISC", "ICN", "PIE", "PYI", "Q", "RSE", "RET", "SIM", "TID", "INT", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.coverage.run]
source = ["uhcr"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
